src/components/Chart/Chart.module.css
.container {
	flex: 1;
	min-height: 0;
	display: grid;
	grid-template-columns: 1fr auto;
	grid-template-rows: 1fr auto;
	gap: 16px;

	.chart {
		grid-column: 1;
		grid-row: 1;

		path {
			transition:
				stroke 0.2s ease,
				stroke-width 0.2s ease,
				stroke-opacity 0.2s ease;
		}
	}

	.slider {
		flex: 1;
	}

	.side-panel {
		display: flex;
		flex-direction: column;
		justify-content: center;
		background-color: var(--bg-secondary);
		grid-column: 2;
		grid-row: 1 / -1;

		.legend {
			padding: 16px;
			display: flex;
			flex-direction: column;
			overflow-y: auto;
			overflow-x: hidden;
		}
	}

	.bottom-panel {
		background-color: var(--bg-secondary);
		display: flex;
		padding: 16px;
		align-items: center;
		gap: 60px;
		justify-content: center;
		grid-column: 1;
		grid-row: 2;

		.toggle {
			font-size: var(--text-small);
		}

		.slider {
			max-width: 600px;
			margin-left: 8px;
		}
	}
}

.info-box {
	padding: 6px 6px 4px 6px;
	border-radius: 4px;
	border: 2px dashed var(--series-color);
	width: fit-content;
	white-space: nowrap;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	gap: 4px;

	table {
		font-size: 14.5px;
		[data-is-zack="true"] & {
			font-size: 14px; /* smaller because bold */
		}

		border-spacing: 0;

		th,
		td {
			padding: 1px 2px;
		}
		th {
			font-weight: normal;
			color: var(--text-secondary);
			&::after {
				content: " |";
			}
		}
		td {
			[data-is-zack="true"] & {
				color: var(--text-secondary);
				font-weight: bold;
			}
		}
	}

	&.tooltip {
		background-color: rgb(from var(--bg-primary) r g b / 0.7);
		width: fit-content;
	}

	.legend & {
		background-color: var(--bg-primary);
		/* hardcoded large enough value for most usernames */
		width: 140px;

		&.highlighted {
			box-shadow: 0 0 12px var(--series-color);
			[data-is-zack="true"] & {
				box-shadow: 0 0 10px var(--series-color);
			}
		}
	}
}

